--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="wrapper">
       <input type="text" class="input-field" />
       <div class="content-box">
-        <div class="typing-text">
+        <div class="typing-text" autofocus>
           <p></p>
         </div>
         <div class="content">
           <ul class="result-details">
             <li class="time">
-              <p>Time Left:</p>
-              <span><b>60</b>s</span>
+              <p>Time Taken:</p>
+              <span><b></b>s</span>
             </li>
             <li class="mistake">
               <p>Mistakes:</p>
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <script src="code.js"></script>
-    <script src="main.js"></script>
+    <script src="code.js"> defer</script>
+    <script src="main.js" defer></script>
 </body>
 </html>
